Add Firefox Flicks to config

--- a/data/config.json
+++ b/data/config.json
@@ -19,6 +19,11 @@
             "bzProduct": "Community Tools",
             "bzComponent": "Phonebook",
             "kanProjectId": 23282
+        },
+        {
+            "bzProduct": "Websites",
+            "bzComponent": "Firefox Flicks",
+            "kanProjectId": 28280
         }
     ]
 }
